--- a/RmsProp.ipynb
+++ b/RmsProp.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "RmsProp.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOhhMNfGDE3A+Pw/q6v6ePg",
+      "authorship_tag": "ABX9TyM/+kr+4+d45QLlDDumXDBf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -211,6 +211,32 @@
     {
       "cell_type": "code",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0Rz-GEEoUOWM",
+        "outputId": "a563efdf-f3a2-4a7c-e3fa-c9e778cb0313"
+      },
+      "source": [
+        "train_samples=len(trainX)\r\n",
+        "test_samples=len(testX)\r\n",
+        "xlen=len(trainX[0])\r\n",
+        "print(xlen)"
+      ],
+      "execution_count": 505,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "784\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "RENPHwVuQJj0"
       },
       "source": [
@@ -239,7 +265,7 @@
         "    return W\r\n",
         "W=initialize_weights(len(trainX[0]),L-1,K,N)"
       ],
-      "execution_count": 404,
+      "execution_count": 551,
       "outputs": []
     },
     {
@@ -283,7 +309,7 @@
         "    return B\r\n",
         "B= initialize_bias(len(trainX[0]),L-1,K,N)"
       ],
-      "execution_count": 406,
+      "execution_count": 549,
       "outputs": []
     },
     {
@@ -367,20 +393,10 @@
         "    A.append(a)\r\n",
         "    hL=softmax(a)\r\n",
         "    H.append(hL)\r\n",
-        "    return H,A,hL"
+        "    return H,A,hL\r\n",
+        "H,A,y_hat=feed_forward(trainX[90],W,B,L)"
       ],
-      "execution_count": 495,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Or0MbClVt2RE"
-      },
-      "source": [
-        "H,A,y_hat=feed_forward(trainX[0],W,B,L)"
-      ],
-      "execution_count": 496,
+      "execution_count": 609,
       "outputs": []
     },
     {
@@ -390,33 +406,33 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YUeukkqM-7Sb",
-        "outputId": "63bbcb31-ebeb-439b-c8d0-e096c0b7aae3"
+        "outputId": "f017892d-af65-466a-be35-6f29076b70f6"
       },
       "source": [
         "y_hat"
       ],
-      "execution_count": 423,
+      "execution_count": 557,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.11170689778759904,\n",
-              " 0.03809014360834538,\n",
-              " 0.07674871798560103,\n",
-              " 0.10722310807328661,\n",
-              " 0.09214987637399444,\n",
-              " 0.08403405033343538,\n",
-              " 0.09341716358617602,\n",
-              " 0.08001674603454335,\n",
-              " 0.17812498793834486,\n",
-              " 0.1384883082786738]"
+              "[0.06284572385600334,\n",
+              " 0.06677488140008991,\n",
+              " 0.10839275522860028,\n",
+              " 0.11773115020528332,\n",
+              " 0.07310190350425351,\n",
+              " 0.08562797692676125,\n",
+              " 0.07770305459715258,\n",
+              " 0.16804206424239385,\n",
+              " 0.14266040705765431,\n",
+              " 0.09712008298180749]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 423
+          "execution_count": 557
         }
       ]
     },
@@ -509,14 +525,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "z7fc10MpTJRN",
-        "outputId": "01a2c1aa-a577-4953-fdda-70e95ef36113"
+        "outputId": "56c9775f-90df-4863-b072-e936b239ed83"
       },
       "source": [
         "print(np.shape(B_grad[0]))\r\n",
         "print(np.shape(B_grad[1]))\r\n",
         "print(np.shape(B_grad[2]))"
       ],
-      "execution_count": 501,
+      "execution_count": 541,
       "outputs": [
         {
           "output_type": "stream",
@@ -532,13 +548,71 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "oVq8AcFRevlz"
+      },
+      "source": [
+        "eta=0.0001"
+      ],
+      "execution_count": 632,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "pE4ILtDxTdqu"
       },
       "source": [
-        ""
+        "def gradient_descent():\r\n",
+        "    t=0\r\n",
+        "    max_iterations=10\r\n",
+        "    W= initialize_weights(xlen,L-1,K,N)\r\n",
+        "    B= initialize_bias(xlen,L-1,K,N)\r\n",
+        "    while (t<max_iterations):\r\n",
+        "        eta_wgrad=list()\r\n",
+        "        eta_bgrad=list()\r\n",
+        "        for l in range(L):\r\n",
+        "            eta_wgrad.append(np.zeros(shape=np.shape(W[l])).tolist())\r\n",
+        "            eta_bgrad.append(np.zeros(shape=np.shape(B[l])).tolist())\r\n",
+        "        for i in range(train_samples):\r\n",
+        "            H,A,y_hat=feed_forward(trainX[i],W,B,L)\r\n",
+        "            W_grad,B_grad=back_propogation(H,A,y_hat,trainY[i])\r\n",
+        "            W_grad=W_grad[::-1]\r\n",
+        "            B_grad=B_grad[::-1]\r\n",
+        "            for l in range(L):\r\n",
+        "                eta_wgrad[l]=(np.matrix(eta_wgrad[l])+np.multiply(eta,W_grad[l])).tolist()\r\n",
+        "                eta_bgrad[l]=(eta_bgrad[l]+np.multiply(eta,B_grad[l])).tolist()\r\n",
+        "        for l in range(L):\r\n",
+        "            W[l]=(np.matrix(W[l])-np.matrix(eta_wgrad[l])).tolist()\r\n",
+        "            B[l]=np.subtract(B[l],eta_bgrad[l])       \r\n",
+        "        t=t+1\r\n",
+        "        print('Epoch',t)\r\n",
+        "    return W,B"
+      ],
+      "execution_count": 633,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b_rn64Wtg6s0",
+        "outputId": "ee4eacfa-f8c6-4e8f-c6a5-ba682b0a7195"
+      },
+      "source": [
+        "W,B = gradient_descent()"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
