--- a/VanilaGD.ipynb
+++ b/VanilaGD.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "VanilaGD.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMVGjGQzO5T3ad0OZw/29dZ",
+      "authorship_tag": "ABX9TyPruxjZ9HWbiB2n3Gha0v4P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,11 +34,12 @@
         "from matplotlib import pyplot as plt\r\n",
         "from matplotlib import gridspec as gridspec\r\n",
         "from random import randint\r\n",
+        "from random import random\r\n",
         "from random import seed\r\n",
         "import math\r\n",
         "from sklearn.utils import shuffle"
       ],
-      "execution_count": 156,
+      "execution_count": 287,
       "outputs": []
     },
     {
