--- a/Adam.ipynb
+++ b/Adam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Adam.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPJ0srMYcqvljo8dwqcpB/b",
+      "authorship_tag": "ABX9TyMLg/LW1J+rDMk7+ey6bdI/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -486,7 +486,7 @@
         "                loss.append(error/batch_size)\r\n",
         "                error=0.0\r\n",
         "                for l in range(L):\r\n",
-        "                    m_w[l]=(np.multiply(beta2,m_w[l])+np.multiply((1-beta2),wgrad[l])).tolist()\r\n",
+        "                    m_w[l]=(np.multiply(beta1,m_w[l])+np.multiply((1-beta1),wgrad[l])).tolist()\r\n",
         "                    mwe=(np.divide(m_w[l],(1-(beta1**t)))).tolist()\r\n",
         "                    v_w[l]=(np.multiply(beta2,v_w[l])+np.multiply((1-beta2),np.square(wgrad[l]))).tolist()\r\n",
         "                    vwe=(np.divide(v_w[l],(1-(beta2**t)))).tolist()\r\n",
@@ -511,7 +511,7 @@
         "        print('Epoch',e)\r\n",
         "    return W,B,loss"
       ],
-      "execution_count": 38,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -549,24 +549,24 @@
           "height": 283
         },
         "id": "rsvhE5H6LhBW",
-        "outputId": "35f40e53-e46a-4cfc-d96b-44f76ba4dac9"
+        "outputId": "a9e10098-12cb-4bfa-d12e-a39f354a8e23"
       },
       "source": [
         "plt.plot(np.arange(1,len(loss)+1),loss)"
       ],
-      "execution_count": 40,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7f3ebd927690>]"
+              "[<matplotlib.lines.Line2D at 0x7f3ebd755dd0>]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 40
+          "execution_count": 44
         },
         {
           "output_type": "display_data",
@@ -599,7 +599,7 @@
         "    if(class_predict==testY[i]):\r\n",
         "      valid+=1"
       ],
-      "execution_count": 41,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -609,12 +609,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NynUbNI3ZsYF",
-        "outputId": "a8b17d82-836e-4f2a-d147-785ead136b7f"
+        "outputId": "c1f56843-ec7a-4888-cd9b-074c987c896d"
       },
       "source": [
         "valid"
       ],
-      "execution_count": 42,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -626,7 +626,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 48
         }
       ]
     }
