--- a/Momentum_grad.ipynb
+++ b/Momentum_grad.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Momentum_grad.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO377Wo3/aluWfeeR5zKDPq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +35,7 @@
         "import random\r\n",
         "import math"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -47,7 +46,7 @@
       "source": [
         "from keras.datasets import fashion_mnist"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -58,19 +57,36 @@
       "source": [
         "(train_X,train_Y), (test_X,test_Y)= fashion_mnist.load_data()"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "O87Z2rxBq5Sj"
+        "id": "O87Z2rxBq5Sj",
+        "outputId": "9cf9a0ac-4552-4564-c972-4564713c4654",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "train_X.shape, train_Y.shape"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((60000, 28, 28), (60000,))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -81,7 +97,7 @@
         "train_X = train_X[:]/255\r\n",
         "test_Y = test_Y[:]/255"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -93,24 +109,45 @@
         "train_X=[train_X[i].flatten() for i in range(len(train_X))]\r\n",
         "test_X=[test_X[i].flatten() for i in range(len(test_X))]"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5s4qxWyIq5Lc"
+        "id": "5s4qxWyIq5Lc",
+        "outputId": "577e2fdc-afd4-42e1-bab2-830aafb5999a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "np.shape(train_X), np.shape(train_Y), np.shape(test_X), np.shape(test_Y)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((60000, 784), (60000,), (10000, 784), (10000,))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LNse_r4yq5I-"
+        "id": "LNse_r4yq5I-",
+        "outputId": "14ec8a8b-6db3-472d-ceb6-0d805352be1e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "train_samples=len(train_X)\r\n",
@@ -118,8 +155,16 @@
         "xlen=len(train_X[0])\r\n",
         "print(xlen)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "784\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -138,40 +183,7 @@
         "#K = number of classes\r\n",
         "K = 10"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "WmDV-xc_q5EV"
-      },
-      "source": [
-        "def sigmoid(a):\r\n",
-        "  h = []\r\n",
-        "  for a1 in a:\r\n",
-        "    h.append(1.0/(1.0 + np.exp(-a1)))\r\n",
-        "  return h"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9H15J4ZZq5By"
-      },
-      "source": [
-        "def softmax(a):\r\n",
-        "  y = []\r\n",
-        "  sum = 0\r\n",
-        "  for a1 in a:\r\n",
-        "    sum+= np.exp(a1)\r\n",
-        "  for a1 in a:\r\n",
-        "    y.append(np.exp(a1)/sum)\r\n",
-        "  return y"
-      ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -187,9 +199,9 @@
         "        W.append([[random.random() for j in range(neurons_hl)]for i in range(neurons_hl)])\r\n",
         "    W.append([[random.random() for j in range(neurons_hl)]for i in range(n_output)])\r\n",
         "    return W\r\n",
-        "W=initialize_weights(len(train_X[0]),Hid,10,N)"
+        "#W=initialize_weights(len(train_X[0]),Hid,10,N)"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -204,9 +216,42 @@
         "        b.append([random.random() for i in range(n_neurons)])\r\n",
         "    b.append([random.random() for i in range(n_output)])\r\n",
         "    return b\r\n",
-        "b = initialize_bias(len(train_X[0]),L-1,10,N)"
+        "#b = initialize_bias(len(train_X[0]),L-1,10,N)"
       ],
-      "execution_count": null,
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fu3B7cRJ2hnC"
+      },
+      "source": [
+        "def sigmoid(a):\r\n",
+        "  h = []\r\n",
+        "  for a1 in a:\r\n",
+        "    h.append(1.0/(1.0 + np.exp(-a1)))\r\n",
+        "  return h"
+      ],
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uhC51rvj2hgf"
+      },
+      "source": [
+        "def softmax(a):\r\n",
+        "  y = []\r\n",
+        "  sum = 0\r\n",
+        "  for a1 in a:\r\n",
+        "    sum+= np.exp(a1)\r\n",
+        "  for a1 in a:\r\n",
+        "    y.append(np.exp(a1)/sum)\r\n",
+        "  return y"
+      ],
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -222,18 +267,18 @@
         "  H.append(h)\r\n",
         "  A.append([0])\r\n",
         "  for i in range(1,L):\r\n",
-        "      a=b[i-1]+np.matmul(W[i-1],h)\r\n",
+        "      a=b[i-1]+np.matmul(W[i-1],H[i-1])\r\n",
         "      A.append(a)\r\n",
         "      h=sigmoid(a)\r\n",
         "      H.append(h)\r\n",
-        "  aL=b[L-1]+np.matmul(W[L-1],h)\r\n",
+        "  aL=b[L-1]+np.matmul(W[L-1],H[L-1])\r\n",
         "  A.append(aL)\r\n",
         "  hL=softmax(aL)\r\n",
         "  H.append(hL)\r\n",
         "  y_hat = hL\r\n",
         "  return H,A,y_hat"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -246,7 +291,7 @@
         "  g=1.0/(1.0 + np.exp(-e))\r\n",
         "  return g*(1-g)"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -261,7 +306,7 @@
         "      res.append(cmp(el))\r\n",
         "    return res"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -270,7 +315,7 @@
         "id": "KLTVqp9IrSMS"
       },
       "source": [
-        "def back_propogation(H,A,y_hat,label):\r\n",
+        "def back_propogation(H,A,y_hat,label,W):\r\n",
         "    W_grad=list()\r\n",
         "    B_grad=list()\r\n",
         "    one_hot_y=np.zeros(K)\r\n",
@@ -283,38 +328,9 @@
         "        if k != 1:\r\n",
         "            h_grad=np.matmul(np.transpose(W[k-1]),ak_grad)\r\n",
         "            ak_grad=np.multiply(h_grad,diff_sigmoid(A[k-1]))\r\n",
-        "    return W_grad,B_grad\r\n",
-        "W_grad,B_grad=back_propogation(H,A,y_hat,train_Y[0])\r\n",
-        "W_grad=W_grad[::-1]\r\n",
-        "B_grad=B_grad[::-1]"
+        "    return W_grad,B_grad"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Ts4-0m5brSI8"
-      },
-      "source": [
-        "print(np.shape(W_grad[0]))\r\n",
-        "print(np.shape(W_grad[1]))\r\n",
-        "print(np.shape(W_grad[2]))"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Pft_zlhGrSGr"
-      },
-      "source": [
-        "print(np.shape(B_grad[0]))\r\n",
-        "print(np.shape(B_grad[1]))\r\n",
-        "print(np.shape(B_grad[2]))"
-      ],
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -326,7 +342,7 @@
         "eta=0.001\r\n",
         "gamma = 0.9"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -343,43 +359,79 @@
         "    loss=list()\r\n",
         "    prev_vw=list()\r\n",
         "    prev_bw=list()\r\n",
+        "    for l in range(L):\r\n",
+        "      prev_vw.append(np.zeros(shape=np.shape(W[l])).tolist())\r\n",
+        "      prev_bw.append(np.zeros(shape=np.shape(B[l])).tolist())\r\n",
         "    while (t<max_iterations):\r\n",
         "      wgrad=list()\r\n",
         "      bgrad=list()\r\n",
         "      for l in range(L):\r\n",
         "          wgrad.append(np.zeros(shape=np.shape(W[l])).tolist())\r\n",
         "          bgrad.append(np.zeros(shape=np.shape(B[l])).tolist())\r\n",
-        "          prev_vw.append(np.zeros(shape=np.shape(W[l])).tolist())\r\n",
-        "          prev_bw.append(np.zeros(shape=np.shape(B[l])).tolist())\r\n",
         "      for i in range(train_samples):\r\n",
         "        for l in range(L):\r\n",
         "            H,A,y_hat=feed_forward_prop(train_X[i],W,B,L)\r\n",
-        "            prob_array = np.zeros(10)\r\n",
-        "            prob_array[train_Y[i]]=1\r\n",
-        "            sum = 0.0\r\n",
-        "            for temp in range(len(y_hat)):\r\n",
-        "              sum += -1*prob_array[temp]*math.log(y_hat[temp])\r\n",
-        "            loss.append(sum)\r\n",
-        "            W_grad,B_grad=back_propogation(H,A,y_hat,train_Y[i])\r\n",
+        "            W_grad,B_grad=back_propogation(H,A,y_hat,train_Y[i],W)\r\n",
         "            W_grad=W_grad[::-1]\r\n",
         "            B_grad=B_grad[::-1]\r\n",
-        "\r\n",
+        "            loss.append(-math.log(y_hat[train_Y[i]]))\r\n",
         "        v_w = []\r\n",
         "        v_b = []\r\n",
         "        v_w.append(np.zeros(shape=np.shape(W[l])).tolist())\r\n",
         "        v_b.append(np.zeros(shape=np.shape(B[l])).tolist())\r\n",
         "        for l in range(L):\r\n",
-        "          v_w[l] = (np.multiply(gamma,prev_vw[l])+np.multiply(eta,W_grad[l])).tolist()\r\n",
-        "          v_b[l] = (np.multiply(gamma,prev_bw[l])+np.multiply(eta,B_grad[l])).tolist()\r\n",
+        "          v_w.append(np.multiply(gamma,prev_vw[l])+np.multiply(eta,W_grad[l]).tolist())\r\n",
+        "          v_b.append(np.multiply(gamma,prev_bw[l])+np.multiply(eta,B_grad[l]).tolist())\r\n",
+        "        for l in range(L):\r\n",
         "          W[l]=(np.matrix(W[l])-np.matrix(v_w[l])).tolist()\r\n",
         "          B[l]=np.subtract(B[l],v_b[l]) \r\n",
+        "        for l in range(L):\r\n",
         "          prev_vw[l] = v_w[l]\r\n",
         "          prev_bw[l] = b_w[l]\r\n",
         "\r\n",
         "      t=t+1\r\n",
         "      print('Epoch',t)\r\n",
-        "    print (loss)\r\n",
         "    return W,B,loss"
+      ],
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Sd8XZJkXrJr0",
+        "outputId": "5e0f2922-38c9-4ead-ba9a-442d6b378b4c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 287
+        }
+      },
+      "source": [
+        "W_m,B_m,loss_m=momentum_gradient_descent()"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-39-2120ea3d635d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mW_m\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mB_m\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mloss_m\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmomentum_gradient_descent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-38-b6b608b05dcc>\u001b[0m in \u001b[0;36mmomentum_gradient_descent\u001b[0;34m()\u001b[0m\n\u001b[1;32m     31\u001b[0m           \u001b[0mv_b\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmultiply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgamma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mprev_bw\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmultiply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meta\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mB_grad\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0ml\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mL\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m           \u001b[0mW\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mW\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv_w\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m           \u001b[0mB\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubtract\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mB\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mv_b\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0ml\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mL\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (5,784) (10,5) "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sCU6Ik5U4Flv"
+      },
+      "source": [
+        "plt.plot(np.arange(1,len(loss_m)+1),loss_m)"
       ],
       "execution_count": null,
       "outputs": []
@@ -387,10 +439,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Sd8XZJkXrJr0"
+        "id": "AD42Vjza4FbZ"
       },
       "source": [
-        "W_m,B_m,loss_m=momentum_gradient_descent()"
+        ""
       ],
       "execution_count": null,
       "outputs": []
