--- a/Momentum_grad.ipynb
+++ b/Momentum_grad.ipynb
@@ -64,10 +64,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "O87Z2rxBq5Sj",
-        "outputId": "9cf9a0ac-4552-4564-c972-4564713c4654",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9cf9a0ac-4552-4564-c972-4564713c4654"
       },
       "source": [
         "train_X.shape, train_Y.shape"
@@ -116,10 +116,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "5s4qxWyIq5Lc",
-        "outputId": "577e2fdc-afd4-42e1-bab2-830aafb5999a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "577e2fdc-afd4-42e1-bab2-830aafb5999a"
       },
       "source": [
         "np.shape(train_X), np.shape(train_Y), np.shape(test_X), np.shape(test_Y)"
@@ -144,10 +144,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "LNse_r4yq5I-",
-        "outputId": "14ec8a8b-6db3-472d-ceb6-0d805352be1e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "14ec8a8b-6db3-472d-ceb6-0d805352be1e"
       },
       "source": [
         "train_samples=len(train_X)\r\n",
@@ -198,8 +198,7 @@
         "    for i in range(n_hidden_layer-1):\r\n",
         "        W.append([[random.random() for j in range(neurons_hl)]for i in range(neurons_hl)])\r\n",
         "    W.append([[random.random() for j in range(neurons_hl)]for i in range(n_output)])\r\n",
-        "    return W\r\n",
-        "#W=initialize_weights(len(train_X[0]),Hid,10,N)"
+        "    return W"
       ],
       "execution_count": 20,
       "outputs": []
@@ -215,8 +214,7 @@
         "    for i in range(n_hidden_layer):\r\n",
         "        b.append([random.random() for i in range(n_neurons)])\r\n",
         "    b.append([random.random() for i in range(n_output)])\r\n",
-        "    return b\r\n",
-        "#b = initialize_bias(len(train_X[0]),L-1,10,N)"
+        "    return b"
       ],
       "execution_count": 21,
       "outputs": []
@@ -400,11 +398,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "Sd8XZJkXrJr0",
-        "outputId": "5e0f2922-38c9-4ead-ba9a-442d6b378b4c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 287
-        }
+        },
+        "outputId": "5e0f2922-38c9-4ead-ba9a-442d6b378b4c"
       },
       "source": [
         "W_m,B_m,loss_m=momentum_gradient_descent()"
